# bigram

./: .gitignore  Bigram-Tensor-1.8B.md  LICENSE  PHILOSOPHY.md  PRETRAIN-DISTILLATION.md  PRETRAIN.md  README.md  RL.md  SFT-data.md  SFT.md  distill.txt  pyproject.toml  requirements-server.txt  requirements.txt  run_windows_quickstart.ps1
bigram/: __init__.py  config.py
configs/: nano1.json  nano15.json  nano2.json  plank1.json  small.json  tensor1.json  tensor1_48gb_safe.json  tensor1_inference.json  tiny.json
data/: nano15_sft.jsonl  nano15_train.jsonl  nano15_val.jsonl  nano1_fix.jsonl  nano1_fix2.jsonl  nano1_sft_final.jsonl  nano1_train.jsonl  nano1_train_balanced.jsonl  nano1_val.jsonl  nano2_a_sft.jsonl  nano2_a_sft_extra.jsonl  nano2_a_sft_fixed.jsonl  nano2_a_train.jsonl  nano2_a_train_v2.jsonl  nano2_a_val.jsonl  nano2_a_val_v2.jsonl  nano2_b_sft.jsonl  nano2_b_train.jsonl  nano2_b_val.jsonl  plank1_sft.jsonl  sample_preferences.jsonl  sample_sft.jsonl
datasach/: sft_19042026_215833.jsonl  sft_20260419_203030.jsonl  sft_23042026_214138.jsonl
docs/: TENSOR1_WINDOWS_SERVER.md
models/: bigram-nano-1.md
nano1/: tokenizer.json
nano15/: bmssp_test.model  bmssp_test.txt  corpus.txt  final_report.md  final_report_v2.md  research_notes.md  tokenizer.json
nano2/: tokenizer.json
plank1/: tokenizer.json
scripts/: add_nano1_recursion_focus.py  append_nano1_identity_data.py  balance_nano1_train.py  build_nano1_dataset_v2.py  build_nano2_data.py  build_nano2_reasoning_pipeline_data.py  build_nano2_specialized_data.py  build_nano2_tokenizer_corpus.py  (+27 more)
(+68 files in other folders)
